Arc-Dark: rename @clrBtn* variables to @clrToolBtn*

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -42,12 +42,12 @@
 
 @clrBodyBg: #404552;
 
-@clrBtnBgHover: rgba(95, 105, 127, 0.37);
-@clrBtnBorderHover: rgba(21, 23, 28, 0.37);
-@clrBtnBgActive: @clrAccent;
-@clrBtnBorderActive: @clrAccent;
-@clrBtnText:rgba(207, 218, 231, 0.8);
-@clrBtnTextActive: #ffffff;
+@clrToolBtnBgHover: rgba(95, 105, 127, 0.37);
+@clrToolBtnBorderHover: rgba(21, 23, 28, 0.37);
+@clrToolBtnBgActive: @clrAccent;
+@clrToolBtnBorderActive: @clrAccent;
+@clrToolBtnText:rgba(207, 218, 231, 0.8);
+@clrToolBtnTextActive: #ffffff;
 
 //---------------------------------
 // Lists / Threadlist
