--- a/Arc-Dark/styles/draftlist-toolbar.less
+++ b/Arc-Dark/styles/draftlist-toolbar.less
@@ -24,24 +24,24 @@
 		border: 1px solid transparent;
 		border-radius: 3px;
 		height: 26px;
-		color: @clrBtnText;
+		color: @clrToolBtnText;
 
 		img.content-mask {
-			background-color: @clrBtnText;
+			background-color: @clrToolBtnText;
 		}
 
 		&:hover {
-			background: @clrBtnBgHover;
-			border-color: @clrBtnBorderHover;
+			background: @clrToolBtnBgHover;
+			border-color: @clrToolBtnBorderHover;
 		}
 
 		&:active {
-			background: @clrBtnBgActive;
-			border-color: @clrBtnBorderActive;
-			color: @clrBtnTextActive;
+			background: @clrToolBtnBgActive;
+			border-color: @clrToolBtnBorderActive;
+			color: @clrToolBtnTextActive;
 
 			img.content-mask {
-				background-color: @clrBtnTextActive;
+				background-color: @clrToolBtnTextActive;
 			}
 		}
 	}
