--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -22,30 +22,30 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 	img.content-mask {
 		zoom: 0.3 !important;
-		background-color: @clrBtnText;
+		background-color: @clrToolBtnText;
 	}
 
 	.item-back-title {
 		margin: 1px 2px 0 3px;
 		font-size: 14px;
-		color: @clrBtnText;
+		color: @clrToolBtnText;
 	}
 
 	&:hover {
-		background-color: @clrBtnBgHover;
-		border-color: @clrBtnBorderHover;
+		background-color: @clrToolBtnBgHover;
+		border-color: @clrToolBtnBorderHover;
 	}
 
 	&:active {
-		background-color: @clrBtnBgActive;
-		border-color: @clrBtnBorderActive;
+		background-color: @clrToolBtnBgActive;
+		border-color: @clrToolBtnBorderActive;
 
 		img.content-mask {
-			background-color: @clrBtnTextActive;
+			background-color: @clrToolBtnTextActive;
 		}
 
 		.item-back-title {
-			color: @clrBtnTextActive;
+			color: @clrToolBtnTextActive;
 		}
 	}
 }
@@ -254,7 +254,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	}
 
 	.refresh img {
-		background-color: @clrBtnText;
+		background-color: @clrToolBtnText;
 
 		&:hover {
 			cursor: pointer;
