Arc-Dark: add button, input, select controls styling

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -76,6 +76,26 @@
 @clrPrefsTextActive: #ffffff;
 @clrPrefsWarningBar: lighten(@clrPrefsBodyBg, 5%);
 
+//---------------------------------
+// Controls
+//---------------------------------
+@clrInputBg: #404552;
+@clrInputBorder: #2b2e39;
+@clrInputText: #d3dae3;
+@clrInputTextPlaceholder: fade(#d3dae3, 30%);
+
+@clrButtonBg: #444a58;
+@clrButtonBorder: #2b2e39;
+@clrButtonBgHover: #505666;
+@clrButtonBorderHover: #2b2e39;
+@clrButtonBgActive: @clrAccent;
+@clrButtonBorderActive: #2b2e39;
+@clrButtonBgDisabled: fade(#444a58, 55%);
+@clrButtonBorderDisabled: fade(#2b2e39, 55%);
+@clrButtonText: #d3dae3;
+@clrButtonTextActive: #ffffff;
+@clrButtonTextDisabled: fade(#d3dae3, 45%);
+
 //------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
