Arc-Dark: Fix thread list warning bar

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -60,7 +60,7 @@
 @clrListTextActive: #ffffff;
 @clrListTextActiveFaded: fade(@clrListTextActive, 50%);
 @clrListScrollbar: #767b87;
-@clrListWarningBar: lighten(@clrListBg, 10%);
+@clrListWarningBar: @clrWindowBg;
 
 //---------------------------------
 // Preferences
