Arc-Dark: fix button styling for disabled active state

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -71,7 +71,8 @@ input[type='url'] {
 		color: @clrButtonTextActive;
 	}
 
-	&.btn-disabled {
+	&.btn-disabled,
+	&.btn-disabled:active {
 		background: @clrButtonBgDisabled;
 		border: 1px solid @clrButtonBorderDisabled;
 		color: @clrButtonTextDisabled;
