Arc-Dark: fix preferences general tab local data buttons

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -182,6 +182,22 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 }
 
 //------------------------------------------------------------
+// Preferences: General tab
+//------------------------------------------------------------
+.preferences-wrap .container-general .local-data .btn {
+	border: 1px solid @clrButtonBorder;
+	border-radius: 3px;
+
+	&:hover {
+		border: 1px solid @clrButtonBorderHover;
+	}
+
+	&:active {
+		border: 1px solid @clrButtonBorderActive;
+	}
+}
+
+//------------------------------------------------------------
 // Preferences: Accounts tab
 //------------------------------------------------------------
 .preferences-wrap .container-accounts .accounts-content {
