Arc-Dark: fix preferences accounts select margin

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -259,6 +259,10 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	}
 }
 
+.preferences-wrap .container-accounts .account-details select {
+	margin-right: 6px;
+}
+
 //------------------------------------------------------------
 // Preferences: Subscription tab
 //------------------------------------------------------------
