Arc-Dark: fix button font size

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -58,6 +58,11 @@ input[type='url'] {
 	border: 1px solid @clrButtonBorder;
 	color: @clrButtonText;
 	height: 2.1em;
+	font-size: 1em;
+
+	&.btn-small, &.btn-large {
+		font-size: 1em;
+	}
 
 	&:hover {
 		background: @clrButtonBgHover;
