Arc-Dark: preferences various fixes

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -74,6 +74,7 @@
 @clrPrefsTextFadedLess: @clrTextFadedLess;
 @clrPrefsTextFadedMore: @clrTextFadedMore;
 @clrPrefsTextActive: #ffffff;
+@clrPrefsScrollbar: #767b87;
 @clrPrefsWarningBar: lighten(@clrPrefsBodyBg, 5%);
 
 //---------------------------------
