Arc-Dark: fix large button

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -62,6 +62,9 @@ input[type='url'] {
 
 	&.btn-small, &.btn-large {
 		font-size: 1em;
+		padding: 0 0.8em;
+		line-height: 1.9em;
+		height: 2.1em;
 	}
 
 	&:hover {
