--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -66,7 +66,7 @@
 // Preferences
 //---------------------------------
 @clrPrefsWindowBg: @clrWindowBg;
-@clrPrefsBodyBg: darken(@clrBodyBg, 2%);
+@clrPrefsBodyBg: lighten(@clrPrefsWindowBg, 2%);
 @clrPrefsTabHover: lighten(@clrPrefsWindowBg, 5%);
 @clrPrefsTabActive: @clrPrefsBodyBg;
 @clrPrefsText: @clrText;
