Arc-Dark: fix preferences appearance tab slider

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -97,6 +97,14 @@
 @clrButtonTextActive: #ffffff;
 @clrButtonTextDisabled: fade(#d3dae3, 45%);
 
+@clrSliderTrackBg: #2d303b;
+@clrSliderButtonBg: #444a58;
+@clrSliderButtonBorder: #262933;
+@clrSliderButtonBgHover: #505666;
+@clrSliderButtonBorderHover: #262933;
+@clrSliderButtonBgActive: @clrAccent;
+@clrSliderButtonBorderActive: @clrAccent;
+
 //------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
