Arc-Dark: fix theme colors

--- a/Arc-Dark/styles/theme-colors.less
+++ b/Arc-Dark/styles/theme-colors.less
@@ -1,7 +1,7 @@
 @import 'arc-variables';
 
-@background-secondary:			@colorBodyBg;
-@text-color:								@colorText;
-@component-active-color:		@colorAccent;
-@toolbar-background-color:	@colorWindowBg;
-@panel-background-color:		@colorSidebarBg;
+@background-secondary:			@clrBodyBg;
+@text-color:								@clrText;
+@component-active-color:		@clrAccent;
+@toolbar-background-color:	@clrWindowBg;
+@panel-background-color:		@clrSidebarBg;
